--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - rocklov-network
   rocklov-web:
-    image: qaninja/rocklov-web
+    image: qaninja/rocklov-web:v2
     container_name: rocklov-web
     ports:
       - '3000:3000'
