--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - rocklov-network
   rocklov-api:
-    image: qaninja/rocklov-api
+    image: qaninja/rocklov-api:v2
     container_name: rocklov-api
     environment:
       - NODE_ENV=development
